# cpp-codes

./: .clang-format  .gitignore  Makefile  README.md
algorithms/: min_window_length_template.cpp
algorithms-and-data-structures/: SingleForwardList.cpp
basics/: alignas_example.cpp  any_example.cpp  assignment_structured_binding_example.cpp  async_example.cpp  atomic_example.cpp  binary_literals_example.cpp  conditional_example.cpp  constructors.hpp  custom_iterator_example.cpp  derrived_example.cpp  email_regex-example.cpp  email_regex_example.cpp  enum_template.cpp  example_regex.cpp  exit_handlers_example.cpp  initialization_example.cpp  invoke_example.cpp  locale_example.cpp  simple_min_max.cpp  (+21 more)
practice_problems/comparison_task/: CMakeLists.txt  Makefile  README.md
practice_problems/comparison_task/cmake/: colors.cmake  options.cmake  options_default.cmake
practice_problems/comparison_task/comparison_container/: CMakeLists.txt
practice_problems/comparison_task/comparison_container/inc/: comparison_tool.hpp  deque_comparison_tool.hpp  list_comparison_tool.hpp  vector_comparison_tool.hpp
practice_problems/comparison_task/comparison_container/src/: deque_comparison_tool.cpp  list_comparison_tool.cpp  main.cpp  vector_comparison_tool.cpp
practice_problems/comparison_task/comparison_map/: CMakeLists.txt  main.cpp  map_comparison_tool.cpp  map_comparison_tool.hpp
practice_problems/comparison_task/data/: list.csv  map.csv  unordered_map.csv  vector.csv
practice_problems/comparison_task/doc/: comparison_table.csv  comparison_table.ods  description_mnowak.odt
(+298 files in other folders)
